# routes/route.go
@@ -40,6 +40,7 @@ func SetupRoute(e *echo.Echo) {
 
 		userRepo     repository.UserRepository     = repository.NewUserRepository(gormDB)
 		questionRepo repository.QuestionRepository = repository.NewQuestionRepository(gormDB)
+		answerRepo   repository.AnswerRepository   = repository.NewAnswerRepository(gormDB)
 	)
 
 	// service
@@ -49,6 +50,7 @@ func SetupRoute(e *echo.Echo) {
 		authService     = service.NewAuthService(userRepo)
 		userService     = service.NewUserService(userRepo)
 		questionService = service.NewQuestionService(questionRepo)
+		answerService   = service.NewAnswerService(answerRepo)
 	)
 
 	// handler
@@ -56,6 +58,7 @@ func SetupRoute(e *echo.Echo) {
 		authHandler     = handler.NewAuthHandler(authService, jwtService)
 		userHandler     = handler.NewUserHandler(userService)
 		questionHandler = handler.NewQuestionHandler(questionService)
+		answerHandler   = handler.NewAnswerHandler(answerService)
 	)
 
 	e.GET("/", func(c echo.Context) error {
@@ -72,10 +75,19 @@ func SetupRoute(e *echo.Echo) {
 	v1 := e.Group("/api/v1")
 	{
 		v1.POST("/login", authHandler.Login)
-		v1.POST("/question", questionHandler.Insert, _middleware.IsLoggedIn)
 		v1.GET("/profile", userHandler.Profile, _middleware.IsLoggedIn)
+
+		v1.POST("/question", questionHandler.Insert, _middleware.IsLoggedIn)
 		v1.GET("/question", questionHandler.All, _middleware.IsLoggedIn)
 		v1.GET("/question/:id", questionHandler.FindById, _middleware.IsLoggedIn)
+		v1.PUT("/question/:id", questionHandler.Update, _middleware.IsLoggedIn)
+		v1.DELETE("/question/:id", questionHandler.Delete, _middleware.IsLoggedIn)
+
+		v1.POST("/answer", answerHandler.InsertAnswer, _middleware.IsLoggedIn)
+		v1.GET("/answer", answerHandler.AllAnswer, _middleware.IsLoggedIn)
+		v1.GET("/answer/:id", answerHandler.FindAnswerById, _middleware.IsLoggedIn)
+		v1.PUT("/answer/:id", answerHandler.UpdateAnswer, _middleware.IsLoggedIn)
+		v1.DELETE("/answer/:id", answerHandler.DeleteAnswer, _middleware.IsLoggedIn)
 	}
 
 	e.Use(middleware.Logger())
